# NOTE: you have to use single-quoted strings in TOML for regular expressions.
[build-system]
requires = ["pip>=19.1.1", "setuptools", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "fmu-dataio"
description = "Facilitate data io in FMU with rich metadata"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache 2.0" }
authors = [{ name = "Equinor", email = "xxxxx@equinor.com" }]
keywords = ["fmu", "sumo"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dynamic = ["version"]
dependencies = [
    "fmu-config>=1.1.0",
    "fmu-datamodels~=0.18.0",
    "numpy",
    "pandas",
    "pyarrow",
    "pydantic",
    "PyYAML",
    "xtgeo>=2.16",
    "fmu-sumo",
    "jsonschema",
]

[project.urls]
Homepage = "https://github.com/equinor/fmu-dataio"
Repository = "https://github.com/equinor/fmu-dataio"
Issues = "https://github.com/equinor/fmu-dataio/issues"
Documentation = "https://fmu-dataio.readthedocs.io"

[project.optional-dependencies]
dev = [
    "coverage>=4.1",
    "ert>=15",
    "hypothesis",
    "jsonschema",
    "mypy",
    "openpyxl",
    "pandas-stubs",
    "pyarrow-stubs",
    "pydocstyle",
    "pyqt6<6.10.0",  # Fails installing via ert
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-runner",
    "pytest-xdist",
    "rstcheck",
    "ruff",
    "types-PyYAML",
    "types-requests",
]
docs = [
    "Sphinx",
    "autoapi",
    "autodoc-pydantic>=2.0.0",
    "furo",
    "myst-parser",
    "pydocstyle",
    "sphinx-autodoc-typehints",
    "sphinx-copybutton",
    "sphinx-togglebutton",
    "sphinxcontrib-apidoc",
    "urllib3<2.7",
]

[project.entry-points.ert]
dataio_case_metadata = "fmu.dataio.scripts.create_case_metadata"
dataio_copy_preprocessed = "fmu.dataio.scripts.copy_preprocessed"

[tool.setuptools_scm]
write_to = "src/fmu/dataio/version.py"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = "tests"
filterwarnings = [
    # Ignore deprecation warnings in tests not specifically testing them
    # These are tested explicitly in test_deprecations.py and test_dataio.py
    "ignore:The 'access_ssdl' argument is deprecated:FutureWarning",
    "ignore:Using the 'content' argument to set both the content:FutureWarning",
    "ignore:Using the 'vertical_domain' argument to set both:FutureWarning",
    "ignore:The 'workflow' argument should be given as a string:FutureWarning",
    "ignore:In the future it will not be possible to enter following arguments:FutureWarning",
    # Ignore no-effect deprecation warnings
    "ignore:The 'runpath' key has currently no function:UserWarning",
    "ignore:The 'grid_model' key has currently no function:UserWarning",
    "ignore:Using the 'legacy_time_format=True' option:UserWarning",
    "ignore:Using the 'createfolder=False' option:UserWarning",
    "ignore:Using the 'verifyfolder=False' option:UserWarning",
    "ignore:The 'reuse_metadata_rule' key is deprecated:UserWarning",
    "ignore:The 'realization' key is deprecated:UserWarning",
    "ignore:The 'aggregation' key is deprecated:UserWarning",
    "ignore:The 'table_include_index' option is deprecated:UserWarning",
    "ignore:Using the 'verbosity' key is now deprecated:UserWarning",
    "ignore:Support for using an absolute path as 'forcefolder':UserWarning",
    "ignore:The 'include_ertjobs' option is deprecated:UserWarning",
    "ignore:The 'depth_reference' key has no function:UserWarning",
    "ignore:The 'meta_format' option is deprecated:UserWarning",
    "ignore:The options 'arrow_fformat', 'cube_fformat':UserWarning",
    # Ignore expected warnings that aren't errors
    "ignore:Could not detect any standard index columns in table:UserWarning",
    "ignore:The table provided does not contain all required standard table index columns:FutureWarning",
    "ignore::FutureWarning:fmu.dataio.providers.objectdata._xtgeo",
    "ignore:Could not detect metadata for the proposed casepath:UserWarning",
    "ignore:Could not auto detect the case metadata:UserWarning",
    "ignore:Both 'geometry' and 'parent' keys are given:UserWarning",
    "ignore:The global config file is lacking masterdata definitions:UserWarning",
    "ignore:Data will be exported, but without metadata:UserWarning",
    "ignore:The value of 'vertical_domain' is 'depth'.*vertical_domain.*will be set to 'time':UserWarning",
    "ignore:Setting 'rep_include' from the config is deprecated:FutureWarning",
    "ignore:Providing input settings through environment variables is deprecated:FutureWarning",
    # Ignore mutation deprecation warnings (tested in test_dataio.py::test_mutation_*)
    "ignore:Mutating ExportData\\..* after initialization is deprecated:FutureWarning",
]

[tool.coverage.run]
omit = [
    "version.py",
    "tests/**",
]

[tool.pydocstyle]
convention = "google"
match = '(?!(test_|_)).*\.py'

[tool.ruff]
line-length = 88
exclude = ["version.py", "docs/ext/**"]

[tool.ruff.lint]
ignore = [
    "B028",  # No explicit `stacklevel` keyword argument found
    "C901",  # mccabe complex-structure
    "PD011",  # Avoid using .values on dataframes (gives false positives)
    "TC001",  # Move imports under TYPE_CHECKING. Breaks Pydantic annotations
    "TC003",  # Move stdlib imports under TYPE_CHECKING. Breaks Pydantic annotations
]
select = [
    "B",  # flake-8-bugbear
    "C",  # pylint-convention
    "C90",  # mccabe
    "E",  # pycodestyle-error
    "F",  # pyflakes
    "I",  # isort
    "NPY",  # numpy
    "PD",  # pandas-vet
    "PIE",  # flake8-pie
    # "PL",  # pylint
    "Q",  # flake8-quotes
    "RET",  # flake8-return
    "RSE",  # flake8-raise
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    # "TID",  # flake8-tidy-imports
    "UP",  # pyupgrade
    "W",  # pylint-warnings
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
disallow_untyped_defs = true
exclude = "^((tests|docs|examples|build|tools)/|conftest.py?)"
extra_checks = true
ignore_missing_imports = true
python_version = 3.11
strict_equality = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
